--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -2,5 +2,5 @@
 @import "font-awesome-sprockets";
 @import "./font-awesome";
 @import "./messages";
-@import "./chat_side";
-@import "./chat_main";
+@import "./side_bar";
+@import "./main_chat";
