--- a/app/assets/stylesheets/_side_bar.scss
+++ b/app/assets/stylesheets/_side_bar.scss
@@ -1,6 +1,13 @@
 .chat-side{
   width: 300px;
-  height: 100%;
+  height: 100vh;
   background-color: #253141;
   float: left;
+  .side-header{
+    height: 100px;
+  }
+  .group-list{
+    height: calc(100vh - 100px);
+    background-color: #2f3e51;
+  }
 }
