--- a/app/views/messages/_side_bar.html.haml
+++ b/app/views/messages/_side_bar.html.haml
@@ -2,9 +2,12 @@
   .side-header
     .side-header__top-item
       .side-header__top-item__user-name
+        GASSY
       .side-header__top-item__icons
         .side-header__top-item__icons--setting-btn
+          set
         .side-header__top-item__icons--edit-btn
+          edit
   .group-list
     .group-list__group-name
     .group-list__new-message
