--- a/app/assets/stylesheets/_main_chat.scss
+++ b/app/assets/stylesheets/_main_chat.scss
@@ -1,6 +1,19 @@
 .chat-main{
-  width: calc(100vh - 300px);
+  width: calc(100vw - 300px);
   height: 100vh;
   background-color: #ffffff;
   float: left;
+  .main-header{
+    height: 100px;
+    background-color: #ffffff;
+    border-bottom-color: #eeeeee;
+  }
+  .chat-room{
+    height: calc(100vh - 190px);
+    background-color: #fafafa;
+  }
+  .form{
+    height: 90px;
+    background-color: #d2d2d2;
+  }
 }
