--- a/app/assets/stylesheets/_side_bar.scss
+++ b/app/assets/stylesheets/_side_bar.scss
@@ -2,9 +2,26 @@
   width: 300px;
   height: 100vh;
   background-color: #253141;
+  color: #ffffff;
+  font-weight: bold;
   float: left;
   .side-header{
     height: 100px;
+    margin: 0 20px;
+    display: flex;
+    align-items: center;
+    &__top-item{
+      background-color: burlywood;
+      width: 100%;
+      font-size: 16px;
+      display: flex;
+      justify-content: space-between;
+      &__user-name{
+      }
+      &__icons{
+        display: flex;
+      }
+    }
   }
   .group-list{
     height: calc(100vh - 100px);
