--- a/app/assets/stylesheets/_side_bar.scss
+++ b/app/assets/stylesheets/_side_bar.scss
@@ -11,15 +11,22 @@
     display: flex;
     align-items: center;
     &__top-item{
-      background-color: burlywood;
       width: 100%;
       font-size: 16px;
       display: flex;
       justify-content: space-between;
       &__user-name{
+        line-height: normal;
       }
       &__icons{
         display: flex;
+        a {
+          i {
+            text-decoration: none;
+            color: #ffffff;
+            padding:0 0 0 5px;
+          }
+        }
       }
     }
   }
