--- a/app/views/messages/_main_chat.html.haml
+++ b/app/views/messages/_main_chat.html.haml
@@ -2,8 +2,12 @@
   .main-header
     .main-header__group-info
       .main-header__group-info__group-name
+        gassys
       .main-header__group-info__member-list
+        member : gassy gagagassy
     .main-header__edit-btn
+      =link_to "#" do
+        Edit
   .chat-room
     .messages
       .messeages__user-name
