--- a/app/views/messages/_side_bar.html.haml
+++ b/app/views/messages/_side_bar.html.haml
@@ -9,5 +9,14 @@
         = link_to "#", class: "side-header__top-item__icons__setting" do
           = icon('fas', 'cog',class: "side-header__top-item__icons__setting--btn")
   .group-list
-    .group-list__group-name
-    .group-list__new-message
+    .group
+      .group__group-name
+        gassys
+      .group__new-messeage
+        no message
+
+    .group2
+      .group__group-name
+        gassys2
+      .group__new-messeage
+        no message2
