--- a/app/assets/stylesheets/_main_chat.scss
+++ b/app/assets/stylesheets/_main_chat.scss
@@ -7,6 +7,36 @@
     height: 100px;
     background-color: #ffffff;
     border-bottom-color: #eeeeee;
+    padding: 0 40px;
+    display: flex;
+    justify-content: space-between;
+    &__group-info{
+      background-color: cornflowerblue;
+      padding-top: 35px;
+      &__group-name{
+        background-color: chartreuse;
+        color: #333333;
+        font-size: 20px;
+      }
+      &__member-list{
+        background-color: salmon;
+        color: #999999;
+        font-size: 12px;
+        padding: 15px 0 0 0;
+      }
+    }
+    &__edit-btn{
+      margin-top: 28px;
+      height: 40px;
+      padding: 0 20px;
+      border:solid 1px #38aef0;
+      display: inline-block;
+      a {
+      text-decoration: none;
+      color: #38aef0;
+      line-height: 40px;
+      }
+    }
   }
   .chat-room{
     height: calc(100vh - 190px);
