--- a/app/assets/stylesheets/_side_bar.scss
+++ b/app/assets/stylesheets/_side_bar.scss
@@ -39,7 +39,7 @@
         font-size: 15px;
         padding-top: 20px;
       }
-      &__new-messeage{
+      &__new-message{
         font-size: 11px;
         padding: 5px 0 40px 0;
       }
@@ -50,7 +50,7 @@
         font-size: 15px;
         padding-top: 20px;
       }
-      &__new-messeage{
+      &__new-message{
         font-size: 11px;
         padding: 5px 0 40px 0;
       }
