--- a/app/views/messages/_main_chat.html.haml
+++ b/app/views/messages/_main_chat.html.haml
@@ -10,9 +10,19 @@
         Edit
   .chat-room
     .messages
-      .messeages__user-name
-      .messeages__date
-      .messeages__messeage
+      .messages__user-name
+        gassy
+        .messages__user-name__date
+          2019/12/04(tue) 24:40:40
+      .messages__message
+        This is SECOND TRY!!
+    .messages2
+      .messages2__user-name
+        gassy2
+        .messages2__user-name__date
+          2019/12/04(tue) 25:10:00
+      .messages2__message
+        Too sleepy!!
   .form
     .input-form
       .input-form__input-box
