--- a/app/views/messages/_side_bar.html.haml
+++ b/app/views/messages/_side_bar.html.haml
@@ -12,11 +12,11 @@
     .group
       .group__group-name
         gassys
-      .group__new-messeage
+      .group__new-message
         no message
 
     .group2
       .group__group-name
         gassys2
-      .group__new-messeage
+      .group__new-message
         no message2
