--- a/app/assets/stylesheets/_main_chat.scss
+++ b/app/assets/stylesheets/_main_chat.scss
@@ -11,15 +11,12 @@
     display: flex;
     justify-content: space-between;
     &__group-info{
-      background-color: cornflowerblue;
       padding-top: 35px;
       &__group-name{
-        background-color: chartreuse;
         color: #333333;
         font-size: 20px;
       }
       &__member-list{
-        background-color: salmon;
         color: #999999;
         font-size: 12px;
         padding: 15px 0 0 0;
@@ -41,6 +38,64 @@
   .chat-room{
     height: calc(100vh - 190px);
     background-color: #fafafa;
+    padding-top: 35px;
+    .messages{
+      padding: 0 40px;
+      &__user-name{
+        font-size: 16px;
+        color: #333333;
+        display: flex;
+        &__date{
+          font-size: 12px;
+          color: #434A54;
+          padding: 0 0 0 12px;
+        }
+      }
+      &__message{
+        font-size: 14px;
+        color: #434A54;
+        padding: 12px 0 0 0;
+        padding-bottom: 46px;
+      }
+    }
+        .messages{
+      padding: 0 40px;
+      &__user-name{
+        font-size: 16px;
+        color: #333333;
+        display: flex;
+        &__date{
+          font-size: 12px;
+          color: #434A54;
+          padding: 0 0 0 12px;
+        }
+      }
+      &__message{
+        font-size: 14px;
+        color: #434A54;
+        padding: 12px 0 0 0;
+        padding-bottom: 46px;
+      }
+    }
+    .messages2{
+      padding: 0 40px;
+      &__user-name{
+        font-size: 16px;
+        color: #333333;
+        display: flex;
+        &__date{
+          font-size: 12px;
+          color: #434A54;
+          padding: 0 0 0 12px;
+        }
+      }
+      &__message{
+        font-size: 14px;
+        color: #434A54;
+        padding: 12px 0 0 0;
+        padding-bottom: 46px;
+      }
+    }
   }
   .form{
     height: 90px;
