--- a/app/assets/stylesheets/_main_chat.scss
+++ b/app/assets/stylesheets/_main_chat.scss
@@ -100,5 +100,37 @@
   .form{
     height: 90px;
     background-color: #d2d2d2;
+    display: flex;
+    align-items: center;
+    padding: 0 40px;
+    .input-form{
+      width: 100%;
+      height: 50px;
+      background-color: #ffffff;
+      position: relative;
+      &__input-box{
+        padding: 0 10px;
+        width: 100%;
+        height: 100%;
+        &__edit-img{
+          position: absolute;
+          right: 10px;
+          i{
+            font-size: 20px;
+            line-height: 50px;
+          }
+          &--file{
+            display: none;
+          }
+        }
+      }
+    }
+    .submit{
+      height: 50px;
+      margin: 0 0 0 15px;
+      background-color: #38aef0;
+      border:solid 1px #38aef0;
+      color: #ffffff;
+    }
   }
 }
