--- a/app/views/messages/_main_chat.html.haml
+++ b/app/views/messages/_main_chat.html.haml
@@ -25,7 +25,7 @@
         Too sleepy!!
   .form
     .input-form
-      %input.input-form__input-box{:type => "text", :placeholder => "type a message"}  
+      %input.input-form__input-box{type: "text", placeholder: "type a message"}  
         %label{class: "input-form__input-box__edit-img"}
           =icon('fas', 'image', class: "input-form__input-box__edit-img--btn")
           %input{type: "file", class: "input-form__input-box__edit-img--file"}
