--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -1,10 +1,7 @@
-@import "font-awesome";
-@import "config/colors";
-@import "config/size";
-@import "config/reset";
-@import "mixins/mixin";
-@import "mixins/vendor_prefix";
-@import "modules/side_bar";
-@import "modules/chat";
-@import "modules/user";
-@import "messages/messages.scss"
+@import "./reset";
+@import "font-awesome-sprockets";
+@import "./font-awesome";
+@import "./messages";
+@import "./side_bar";
+@import "./main_chat";
+@import "./user";
