--- a/app/views/messages/_side_bar.html.haml
+++ b/app/views/messages/_side_bar.html.haml
@@ -2,11 +2,11 @@
   .side-header
     .side-header__top-item
       .side-header__top-item__user-name
-        GASSY
+        = current_user.name
       .side-header__top-item__icons
         = link_to "#", class: "side-header__top-item__edit" do
           = icon('fas', 'edit',class: "side-header__top-item__icons__edit--btn")
-        = link_to "#", class: "side-header__top-item__icons__setting" do
+        = link_to edit_user_path(current_user), class: "side-header__top-item__icons__setting" do
           = icon('fas', 'cog',class: "side-header__top-item__icons__setting--btn")
   .group-list
     .group
