--- a/app/assets/stylesheets/_side_bar.scss
+++ b/app/assets/stylesheets/_side_bar.scss
@@ -1,8 +1,8 @@
 .chat-side{
   width: 300px;
   height: 100vh;
-  background-color: #253141;
-  color: #ffffff;
+  background-color: $side_blue_dark;
+  color: $white;
   font-weight: bold;
   float: left;
   .side-header{
@@ -23,7 +23,7 @@
         a {
           i {
             text-decoration: none;
-            color: #ffffff;
+            color: $white;
             padding:0 0 0 5px;
           }
         }
@@ -32,7 +32,7 @@
   }
   .group-list{
     height: calc(100vh - 100px);
-    background-color: #2f3e51;
+    background-color: $side_blue_light;
     .group{
       margin: 0 20px;
       &__group-name{
