--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -1,6 +1,8 @@
 @import "./reset";
 @import "font-awesome-sprockets";
 @import "./font-awesome";
+@import "config/colors";
+@import "modules/flash";
 @import "./messages";
 @import "./side_bar";
 @import "./main_chat";
