--- a/app/assets/stylesheets/_side_bar.scss
+++ b/app/assets/stylesheets/_side_bar.scss
@@ -30,29 +30,22 @@
       }
     }
   }
-  .group-list{
+  .groups{
     height: calc(100vh - 100px);
     background-color: $side_blue_light;
     .group{
       margin: 0 20px;
-      &__group-name{
+      &__name{
         font-size: 15px;
         padding-top: 20px;
+        text-decoration: none;
+        color: $white;
       }
-      &__new-message{
+      &__message{
         font-size: 11px;
         padding: 5px 0 40px 0;
-      }
-    }
-    .group2{
-      margin: 0 20px;
-      &__group-name{
-        font-size: 15px;
-        padding-top: 20px;
-      }
-      &__new-message{
-        font-size: 11px;
-        padding: 5px 0 40px 0;
+        text-decoration: none;
+        color: $white;
       }
     }
   }
