--- a/app/assets/stylesheets/_main_chat.scss
+++ b/app/assets/stylesheets/_main_chat.scss
@@ -107,7 +107,7 @@
       height: 50px;
       background-color: $white;
       position: relative;
-      &__input-box{
+      .input-box{
         padding: 0 10px;
         width: 100%;
         height: 100%;
