--- a/app/views/messages/_main_chat.html.haml
+++ b/app/views/messages/_main_chat.html.haml
@@ -24,9 +24,10 @@
       .messages2__message
         Too sleepy!!
   .form
-    .input-form
-      %input.input-form__input-box{type: "text", placeholder: "type a message"}  
-        %label{class: "input-form__input-box__edit-img"}
-          =icon('fas', 'image', class: "input-form__input-box__edit-img--btn")
-          %input{type: "file", class: "input-form__input-box__edit-img--file"}
-    %input.form.submit{:type => "submit" ,:value => "Send"}
+    = form_for [@group, @message] do |f|
+      = f.text_field :content, class: 'input-form',placeholder: "type a message"  
+        .input-box
+          = f.label :image, class: 'input-box__edit-img' do
+            = icon('fas', 'image', class: 'icon')
+            = f.file_field :image, class: '--file'
+      = f.submit 'Send', class: 'submit'
