--- a/app/views/messages/_main_chat.html.haml
+++ b/app/views/messages/_main_chat.html.haml
@@ -25,9 +25,9 @@
         Too sleepy!!
   .form
     = form_for [@group, @message] do |f|
-      = f.text_field :content, class: 'input-form',placeholder: "type a message"  
-        .input-box
-          = f.label :image, class: 'input-box__edit-img' do
-            = icon('fas', 'image', class: 'icon')
-            = f.file_field :image, class: '--file'
+      = f.text_field :content,class: 'input-message', placeholder: "type a message"
+      .edit 
+        = f.label :image, class: 'edit__img' do
+          = icon('fas', 'image', class: 'icon')
+          = f.file_field :image, class: 'edit__img__file'
       = f.submit 'Send', class: 'submit'
