--- a/app/assets/stylesheets/_main_chat.scss
+++ b/app/assets/stylesheets/_main_chat.scss
@@ -102,16 +102,16 @@
     display: flex;
     align-items: center;
     padding: 0 40px;
-    .input-form{
+    .new_message{
       width: 100%;
       height: 50px;
       background-color: $white;
       position: relative;
-      .input-box{
+      .input-message{
         padding: 0 10px;
         width: 100%;
         height: 100%;
-        &__edit-img{
+        &__edit__img{
           position: absolute;
           right: 10px;
           i{
