--- a/app/assets/stylesheets/_main_chat.scss
+++ b/app/assets/stylesheets/_main_chat.scss
@@ -47,7 +47,7 @@
         display: flex;
         &__date{
           font-size: 12px;
-          color: $black;
+          color: $light_gray;
           padding: 0 0 0 12px;
         }
       }
