--- a/app/views/messages/_side_bar.html.haml
+++ b/app/views/messages/_side_bar.html.haml
@@ -15,4 +15,4 @@
           .group__name
             = group.name
           .group__message
-            新着メッセージはありません
+            = group.last_message
