--- a/app/views/messages/_message.html.haml
+++ b/app/views/messages/_message.html.haml
@@ -1,9 +1,10 @@
-.messages__user-name
-  = message.user.name
-  .messages__user-name__date
-    = message.created_at.strftime("%Y/%m/%d %H:%M")
-.messages__message
-  - if message.content.present?
-    %p.lower-message__content
-      = message.content
-  = image_tag message.image.url, class: 'lower-message__image' if message.image.present?
+.message
+  .message__user-name
+    = message.user.name
+    .message__user-name__date
+      = message.created_at.strftime("%Y/%m/%d %H:%M")
+  .message__message
+    - if message.content.present?
+      %p.lower-message__content
+        = message.content
+    = image_tag message.image.url, class: 'lower-message__image' if message.image.present?
