--- a/app/assets/stylesheets/_main_chat.scss
+++ b/app/assets/stylesheets/_main_chat.scss
@@ -71,30 +71,34 @@
     .new_message{
       display: flex;
       width: 100%;
-      height: 50px;
-      background-color: $white;
-      .input-message{
-        padding: 0 10px;
+      .input_box{
         width: 100%;
-        height: 100%;
+        height: 50px;
+        display: flex;
         position: relative;
-      }
-      .edit{
-        &__img{
+        .input-message{
+          width: 100%;
+          padding: 0 40px 0 10px;
+          height: 100%;
+          border-style: none;
+        }
+        .edit{
           position: absolute;
           right: 10px;
-          i{
-            font-size: 20px;
-            line-height: 50px;
-          }
-          &__file{
-            display: none;
+          &__img{
+            i{
+              font-size: 20px;
+              line-height: 50px;
+            }
+            &__file{
+              display: none;
+            }
           }
         }
       }
       .submit{
-        height: 50px;
-        margin: 0 0 0 15px;
+        padding: 0 30px;
+        margin-left: 15px;
         background-color: $light_blue;
         border:solid 1px $light_blue;
         color: #ffffff;
